replaced boolean object-creation with valueOf()